api.test method

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -44,6 +44,8 @@ play.i18n.langs = [ "en" ]
 # play.evolutions.db.default.enabled=false
 
 slack {
+  endpoint = "https://slack.com/api/"
+
   team=${?SLACK_TEAM}
   user=${?SLACK_USER}
   token=${?SLACK_TOKEN}
